tests/array_literal_failure/error.txt
Validation error: ./tests/array_literal_failure/array_literal_failure.fae:8
 Expected argument of type `[3]i32`, got `[2]i32`
  8|     func(array)
              ^^^^^

Validation error: ./tests/array_literal_failure/array_literal_failure.fae:9
 Cannot assign to index of immutable array
  9|     array[1] = 3
         ^^^^^^^^^^^^

Validation error: ./tests/array_literal_failure/array_literal_failure.fae:10
 Cannot assign to index of immutable array
  10|     array[0] = 4
          ^^^^^^^^^^^^

Validation error: ./tests/array_literal_failure/array_literal_failure.fae:11
 Expected argument of type `[3]i32`, got `[2]i32`
  11|     func(array)
               ^^^^^
